--- a/src/components/connect-modal/connectModal.css
+++ b/src/components/connect-modal/connectModal.css
@@ -107,3 +107,15 @@ button b:hover {
 .footer a:hover {
     border-bottom: 2px solid darkorange;
 }
+
+.exit {
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    margin: 15px;
+}
+
+.exit:hover {
+    color: grey;
+    opacity: 0.3;
+}
