--- a/src/components/select-modal-window/select-modal-window.css
+++ b/src/components/select-modal-window/select-modal-window.css
@@ -20,7 +20,7 @@
 .modal__content {
     padding: 20px;
     border-radius: 50px;
-    background-color: lightblue;
+    background: rgb(220, 240, 255);
     width: 900px;
     height: 1100px;
     transform: scale(0.5);
@@ -38,11 +38,15 @@
 }
 .modal__content .select-input input {
     width: 850px;
-    height: 80px;
-    font-size: 40px;
-    padding: 15px;
+    height: 100px;
+    font-size: 35px;
+    font-weight: 500;
+    padding: 20px;
+    border: none;
+    transition: background 0.3s ease-in-out 0s;
+    box-shadow: rgb(255 255 255) 2px -6px 4px inset, rgb(162 200 216) -4px 2px 4px inset;
     border-radius: 30px;
-    box-shadow: inset 0 0 0 6px lightgrey;
+    background: none;
     margin: 20px 0;
     outline: none;
 }
@@ -63,12 +67,11 @@
 }
 
 .modal__content .all-wallet {
-    width: 850px;
+    width: 860px;
     height: 400px;
-    background-color: skyblue;
-    border: 2px solid grey;
+    border-top: 2px;
+    box-shadow: 6px 2px 6px 2px inset lightgrey;
     margin-top: 40px;
-    margin-left: -15px;
 }
 
 .modal__content .link a {
@@ -89,5 +92,34 @@
 .question {
     margin-left: 15px;
     margin-bottom: -5px;
+}
+
+.all-wallet {
+    position: relative;
+    height: 112px;
+    width: 100%;
+    overflow: auto;
+    will-change: transform;
+    direction: ltr;
+}
+
+.all-wallet-coin div {
+    display: grid;
+}
+.all-wallet-coin div * {
+    background-color: #fff;
+    margin: 5px 12px;
+}
+.all-wallet {
+    height: 100%;
+    border: 1px solid #c1c1c1;
+    overflow-y: scroll;
+    background-color: black;
+}
+
+.all-wallet-coin .coin-data {
+    display: flex;
+    align-items: center;
+    font-size: 30px;
 }
 
