--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -66,6 +66,9 @@ a {
     border: 1px solid rgb(255, 120, 74);
     cursor: pointer;
 }
+.connect-btn-wrap:hover {
+    border: 2px solid rgb(255,80,74);
+}
 .connect-btn {
     color: rgb(0, 0, 0);
     line-height: 38px;
