--- a/src/components/main-content/main-content.css
+++ b/src/components/main-content/main-content.css
@@ -28,14 +28,14 @@
 }
 
 .header h4 {
-    font-size: 16px;
-    font-family: Monserrat,sans-serif;
+    font-size: 18px;
+    font-family: 'Inter var',sans-serif;
     font-weight: 500;
 }
 
 .header b {
-    font-size: 16px;
-    font-family: Monserrat,sans-serif;
+    font-size: 18px;
+    font-family: 'Inter var',sans-serif;
     font-weight: 500;
 }
 .header .setting img:hover {
@@ -99,11 +99,12 @@
     color: black;
     margin-left: 10px;
     padding: 0 12px;
-    font-size: 14px;
-    font-weight: 600;
     cursor: pointer;
 }
-
+.crypto option {
+    font-size: 18px;
+    font-weight: 500;
+}
 .crypto button:hover {
     background-color: darkorange;
 }
@@ -134,12 +135,13 @@
     color: black;
     padding: 10px;
     font-size: 16px;
-    font-weight: 600;
     margin-left: -3px;
     cursor: pointer;
 }
 .select button option {
     padding: 10px;
+    font-size: 18px;
+    font-weight: 500;
 }
 
 .main_content p {
@@ -157,11 +159,11 @@
     margin-left: 13px;
     padding: 20px;
     background-color: rgb(255, 120, 74);
-    border-radius: 20px;
+    border-radius: 15px;
     font-size: 18px;
     font-weight: 600;
-    border: 3px solid rgb(0, 0, 0);
-    box-shadow: rgb(0 0 0) 4px 4px 0px;
+    border: 4px solid rgb(0, 0, 0);
+    box-shadow: rgb(0 0 0) 4px 4px 0;
 }
 .connect button:hover {
     box-shadow: none;
